--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: webworker_isolate
-description: A Dart app that uses Angular 2
-version: 0.0.1
+name: prime_finder
+description: An app that uses WebWorkers for finding prime numbers.
+version: 1.0.0
 environment:
   sdk: '>=1.19.0 <2.0.0'
 dependencies:
